# tinysearch

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.alpine  LIBRARY_USAGE.md  Makefile  NOTES.md  POST.md  README.md  build.rs  demo.html  index.html  package.json  report.json  stopwords  store  test_browser_simple.html  test_wasm.html  test_wasm_fixed.html  test_wasm_node.js  testscript.sh  tinysearch.toml  tinysearch_engine.wasm
.github/actions/cached-toolchain/: action.yml
.github/workflows/: ci.yml  docker.yml  release.yml  rust.yml
assets/: demo.html  tinysearch_loader.js
assets/crate/: Cargo.toml.template  Cargo_orig.toml
assets/crate/src/: lib.rs
cuckoofilter/: CHANGELOG.md  Cargo.toml  README.md
cuckoofilter/benches/: bench_lib.rs
cuckoofilter/cabi/: Cargo.toml  Makefile  build.rs
cuckoofilter/cabi/src/: lib.rs
cuckoofilter/cabi/tests/: Makefile
cuckoofilter/src/: bucket.rs  lib.rs  util.rs
cuckoofilter/tests/: false_positive_rate.rs  interop.rs
demo/: README.md  browser.html  node.js
engine/: Cargo.toml
engine/src/: lib.rs
examples/: README.md  index.json  search_index_type.rs  tinysearch.toml
examples/blog/: README.md  posts.json  tinysearch.toml
examples/documentation/: README.md  docs.json  tinysearch.toml
examples/ecommerce/: README.md  products.json  tinysearch.toml
examples/hugo/: README.md
examples/library_advanced/: main.rs
examples/library_basic/: main.rs
examples/yew-example/: .gitignore  Cargo.toml  Trunk.toml  index.html
examples/yew-example-crate/: Cargo.toml  Trunk.toml  index.html
examples/yew-example-crate/src/: main.rs
examples/yew-example-storage/: Cargo.toml  Trunk.toml  index.html
examples/yew-example-storage/src/: main.rs
examples/yew-example/src/: main.rs
examples/zola/: README.md
fixtures/: index.json  poem1.md  poem2.md  poem3.md
howto/: hugo.md  pelican.md  zola.md
pkg/: package.json  tinysearch_engine.d.ts  tinysearch_engine.js  tinysearch_engine_bg.d.ts  tinysearch_engine_bg.wasm
shared/: Cargo.toml
shared/src/: lib.rs
src/: api.rs  filter.rs  lib.rs  main.rs  types.rs
tests/: integration_test.rs
tinysearch/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
tinysearch-engine/: Cargo.toml
tinysearch-engine/src/: lib.rs
tinysearch/assets/: demo.html
tinysearch/assets/crate/: Cargo.toml
tinysearch/assets/crate/src/: lib.rs
tinysearch/src/: index.js  index.rs  lib.rs  main.rs  storage.rs  templates.rs
wasm_test_output/: test.html  tinysearch_engine.js  tinysearch_engine.wasm
wasm_test_output_optimized/: tinysearch_engine.js  tinysearch_engine.wasm
