[package]
name = "tinysearch"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
version = "0.8.1"
edition = "2021"
description = "A tiny search engine for static websites"
license = "Apache-2.0/MIT"
documentation = "https://github.com/mre/tinysearch/blob/master/README.md"
homepage = "https://github.com/mre/tinysearch"
repository = "https://github.com/mre/tinysearch"

readme = "README.md"
include = ["src", "assets", "README.md"]

[lib]

[[bin]]
name = "tinysearch"
required-features = ["bin"]

[dependencies]
bincode = "1.3.3"


argh = { version = "0.1.10", optional = true }
log = { version = "0.4.19", optional = true }
serde_json = { version = "1.0.103", optional = true }
anyhow = { version = "1.0.72", optional = true }
tempfile = { version = "3.7.0", optional = true }

serde_derive = { version = "1.0.175", optional = true }
phf = { version = "0.11.2", optional = true }
strip_markdown = { version = "0.2.0", optional = true }
strum = { version = "0.25.0", features = ["derive"], optional = true }
toml_edit = { version = "0.19.14", optional = true }


[dependencies.serde]
version = "1.0.175"
features = ["derive"]

[dependencies.xorf]
version = "0.8.1"
default-features = false
features = ["serde"]


[features]
default = []
bin = [
	"argh",
	"log",
	"serde_json",
	"anyhow",
	"tempfile",
	"serde_derive",
	"phf",
	"strip_markdown",
	"strum",
	"toml_edit",
]
