[package]
name = "tinysearch"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
resolver = "2"
description = "A tiny search engine for static websites"
license = "Apache-2.0/MIT"
documentation = "https://github.com/mre/tinysearch/blob/master/README.md"
homepage = "https://github.com/mre/tinysearch"
repository = "https://github.com/mre/tinysearch"

readme = "README.md"
include = ["src", "assets", "README.md"]

[lib]

[[bin]]
name = "tinysearch"
required-features = ["bin"]

[dependencies]
bincode = "1.3.3"

argh = { version = "0.1.12", optional = true }
log = { version = "0.4.22", optional = true }
serde_json = { version = "1.0.132", optional = true }
anyhow = { version = "1.0.93", optional = true }
tempfile = { version = "3.14.0", optional = true }

strip_markdown = { version = "0.2.0", optional = true }
strum = { version = "0.26.3", features = ["derive"], optional = true }
toml_edit = { version = "0.22.22", optional = true }


[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.xorf]
version = "0.11.0"
default-features = false
features = ["serde"]


[features]
default = []
bin = [
	"argh",
	"log",
	"serde_json",
	"anyhow",
	"tempfile",
	"strip_markdown",
	"strum",
	"toml_edit",
]

[dev-dependencies]
tempfile = "3.14.0"
