[package]
name = "tinysearch"
version = "0.9.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2024"
rust-version = "1.85"
resolver = "2"
description = "A tiny search engine for static websites"
readme = "README.md"
license = "Apache-2.0/MIT"
homepage = "https://github.com/mre/tinysearch"
repository = "https://github.com/mre/tinysearch"
documentation = "https://github.com/mre/tinysearch/blob/master/README.md"
include = ["src", "assets", "README.md"]

[lib]

[[bin]]
name = "tinysearch"
required-features = ["bin"]

[dependencies]
bincode = "1.3.3"

argh = { version = "0.1.12", optional = true }
log = { version = "0.4.22", optional = true }
serde_json = "1.0.132"
anyhow = { version = "1.0.93", optional = true }
tempfile = { version = "3.14.0", optional = true }

strip_markdown = "0.2.0"
strum = { version = "0.26.3", features = ["derive"], optional = true }
toml = { version = "0.8.19", optional = true }
toml_edit = { version = "0.22.22", optional = true }


[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.xorf]
version = "0.11.0"
default-features = false
features = ["serde"]


[features]
default = []
bin = [
	"argh",
	"log",
	"anyhow",
	"tempfile",
	"strum",
	"toml",
	"toml_edit",
]

[dev-dependencies]
tempfile = "3.14.0"

[lints.clippy]
# Pedantic lints that help with code quality (lower priority so allows can override)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Restriction lints for better code practices  
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"
missing_docs_in_private_items = "warn"
print_stdout = "warn"
print_stderr = "warn"
use_debug = "warn"

# Performance lints
inefficient_to_string = "warn"
large_enum_variant = "warn"
trivially_copy_pass_by_ref = "warn"

# Correctness lints (use new name)
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
float_arithmetic = "warn"
as_conversions = "warn"

# Style lints
string_add = "warn"
string_add_assign = "warn"
single_char_lifetime_names = "warn"
explicit_deref_methods = "warn"

# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
