[package]
name = "tinysearch-engine"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
version = "0.2.2"
edition = "2018"
description = "A tiny search engine for static websites"
license = "Apache-2.0/MIT"
documentation = "https://github.com/mre/tinysearch/blob/master/README.md"
homepage = "https://github.com/mre/tinysearch"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.1.4"
tinysearch-cuckoofilter = "0.4.0"
lazy_static = "1.3.0"
wee_alloc = "0.4.4"
tinysearch-shared = { path = "../shared", version = "0.2.0" }

[dependencies.wasm-bindgen]
version = "0.2.42"
features = ["serde-serialize"]

[workspace]
members = []

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true
codegen-units = 1