[package]
name = "tinysearch-engine"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
version = "0.6.2"
edition = "2018"
description = "A tiny search engine for static websites"
license = "Apache-2.0/MIT"
documentation = "https://github.com/mre/tinysearch/blob/master/README.md"
homepage = "https://github.com/mre/tinysearch"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
once_cell = "1.8.0"

[dependencies.tinysearch-shared]
path = "../shared"
version = "0.6.2"

[dependencies.xorf]
version = "0.7.2"
default-features = false 

[dependencies.wasm-bindgen]
version = "0.2.75"
features = ["serde-serialize"]

[workspace]
members = []

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true
codegen-units = 1
