[package]
name = "tinysearch-shared"
version = "0.2.1"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"
description = "Shared libraries for tinysearch - a tiny search engine for static websites"
license = "Apache-2.0/MIT"

[dependencies]
bincode = "1.3.1"

[dependencies.cuckoofilter]
version = "0.5.0"
default-features = false 
features = ["serde_support"]
