[package]
name = "tinysearch-shared"
version = "0.6.4"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2021"
description = "Shared libraries for tinysearch - a tiny search engine for static websites"
license = "Apache-2.0/MIT"

[dependencies]
bincode = "1.3.3"

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies.xorf]
version = "0.7.2"
default-features = false 
features = ["serde"]
