[package]
name = "tinysearch-engine"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
version = "0.7.0"
edition = "2021"
description = "A tiny search engine for static websites"
license = "Apache-2.0/MIT"
documentation = "https://github.com/mre/tinysearch/blob/master/README.md"
homepage = "https://github.com/mre/tinysearch"

[dependencies]
bincode = "1.3.3"

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies.xorf]
version = "0.7.2"
default-features = false 
features = ["serde"]
